- normalizeFeatures, createDummyFeatures: arg 'exclude' was replaced by 'cols'
- normalizeFeatures is now S3 and can be called also on data.frames
- classif.ranger, regr.ranger and surv.ranger: now respect unordered factors by default
- added the ability to generate and plot data from the hyperparameter tuning
  path for a single hyperparameter

- new learners
-- classif.C50
-- classif.gausspr
-- classif.penalized.fusedlasso
-- classif.penalized.lasso
-- classif.penalized.ridge
-- classif.h2o.deeplearning
-- classif.h2o.gbm
-- classif.h2o.glm
-- classif.h2o.randomForest
-- classif.rrf
-- regr.penalized.fusedlasso
-- regr.gausspr
-- regr.glm
-- regr.h2o.deeplearning
-- regr.h2o.gbm
-- regr.h2o.glm
-- regr.h2o.randomForest
-- regr.rrf
-- surv.cv.CoxBoost
-- surv.penalized.fusedlasso
-- surv.penalized.lasso
-- surv.penalized.ridge
-- cluster.kkmeans

- removed learners
-- surv.optimCoxBoostPenalty
-- surv.penalized (split up, see new learners above)

- new functions
-- generateHyperParsEffectData
-- plotHyperParsEffect

- removed functions
-- getParamSet generic (now in ParamHelpers package)

- new measures
-- measureBrier (for mutliclass problems)
-- logloss

mlr_2.8:
- Feature filter "univariate" had a bad name, was deprecated and is now called
 "univariate.model.score". The new one also has better defaults.
- (generate/plot)PartialPrediction: added new arg "geom" for tile plots
- small fix for plotBMRSummary
- the ModelMultiplexer inherits its predict.type from the base learners now
- check that learners in an ensemble have the same predict.type
- new function getBMRModels to extract stored models from a benchmark result
- Fixed a bug where several learners from the LiblineaR package
  ("classif.LiblineaRL2LogReg", "classif.LiblineaRL2SVC", "regr.LiblineaRL2L2SVR")
  were calling the wrong value for "type" (0) and thus training the wrong model.
- Fixed a bug where the resampling objects hout, cv2, cv3, cv5, cv10 were not documented
  in the ResampleDesc help page